--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
-    "vite": "^4.5.0",
+    "@vitejs/plugin-react": "^3.1.0",
     "sass": "^1.69.0",
-    "@vitejs/plugin-react": "^3.1.0"
+    "vite": "^4.5.0"
   }
 }
